...
    "Agenda" : {

    },
    "Agent" : {

    },
    "AI recommendations" : {

    },
    "Appointment not booked" : {

    },
    "Appointment not found" : {
...
    "Show the month" : {

    },
    "Show the week" : {

    },
    "Sign in" : {

    },
    "Sign in to access your store data." : {

    },
    "Sign-in failed. Please try again." : {
...
